[metadata]
name = nicolive-dl
url = https://github.com/kairi003/nicolive-dl
version = 0.1.0
license = MIT
license_file = LICENSE
description = ニコ生ダウンローダー
author = kairi
author_email = kairi.satellite@gmail.com
keywords =
    nicovideo
    nicovideo.jp
    live.nicovideo.jp
    nicolive
    niconico
    downloader

[options]
install_requires =
    beautifulsoup4
    bs4
    certifi
    chardet
    idna
    requests
    sanitize-filename
    soupsieve
    urllib3
    websockets

[options.entry_points]
console_scripts = 
    nicolive_dl = nicolive_dl.__main__:main
